<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tadhg.moodchart.activity.HomeFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:id="@+id/date"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_below="@+id/date"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/text"
        android:text="@string/mood_text" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:id="@+id/myRadioGroup"

        android:checkedButton="@+id/sound" >

        <RadioButton

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/great"
            android:text="@string/great" />

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/good"
            android:text="@string/good" />

        <RadioButton

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/average"
            android:text="@string/average" />

        <RadioButton

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bad"
            android:text="@string/bad" />

        <RadioButton

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/terrible"
            android:text="@string/terrible" />

    </RadioGroup>
    <!--
        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myRadioGroup"
            card_view:cardBackgroundColor="@color/colorPrimary"
            card_view:cardCornerRadius="2dp"
            android:layout_margin="6dp"
            card_view:cardElevation="6dp"
            android:gravity="center_horizontal">

            <TextView android:id="@+id/choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8.5dp"
                android:paddingBottom="8.5dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/textColorPrimary"
                android:fontFamily="sans-serif-medium"
                android:text="Choose" />

        </android.support.v7.widget.CardView>
    -->

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/myRadioGroup"

                android:layout_marginTop="10dp"
                android:id="@+id/chooseBtn"
                android:text="@string/choose" />




</RelativeLayout>